[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/act_1/town/Town2.gd" type="Script" id=1]
[ext_resource path="res://scenes/act_1/town/TownBg.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/pause/PauseScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://music/Daniel Diaz-Solo Contrabass-kissvk.com.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/act_1/StartText.gd" type="Script" id=6]
[ext_resource path="res://scenes/pause/font/new_dynamicfont_loc.tres" type="DynamicFont" id=7]
[ext_resource path="res://music/StrongSoftWind.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/enemy/Enemy3.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/act_1/to_next_loction/To_next_location.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2052.71, 20 )

[node name="Town" type="Node2D"]
script = ExtResource( 1 )

[node name="town" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="town"]
position = Vector2( -1001.85, -300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="town/StaticBody2D"]
position = Vector2( 1004.5, 778.987 )
shape = SubResource( 1 )

[node name="Player" parent="." groups=[
"gg",
"People",
] instance=ExtResource( 3 )]
position = Vector2( 629.599, 359.011 )
scale = Vector2( 0.4, 0.4 )

[node name="Pause" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Start_text" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Start_text" type="Control" parent="Start_text"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Start_text/Start_text"]
margin_left = 4.42603
margin_top = -4.42603
margin_right = 2004.43
margin_bottom = 1995.57
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Start_text/Start_text"]
margin_left = 600.0
margin_top = 400.0
margin_right = 955.0
margin_bottom = 471.0
custom_fonts/font = ExtResource( 7 )
text = "With No Meanings
1864"
align = 1

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
pitch_scale = 0.1
autoplay = true
attenuation = 1.8025

[node name="Enemy" parent="." instance=ExtResource( 9 )]
position = Vector2( 820.982, 340.577 )
scale = Vector2( 0.4, 0.4 )

[node name="Label1" type="Label" parent="."]
margin_left = 1250.89
margin_top = 93.7259
margin_right = 1415.89
margin_bottom = 107.726
text = "There is something wrong"

[node name="Label2" type="Label" parent="."]
margin_left = 1596.17
margin_top = 90.0048
margin_right = 1809.17
margin_bottom = 104.005
text = "I have to make sure she is alright"

[node name="To_next_location" parent="." instance=ExtResource( 10 )]
position = Vector2( 1861.52, 352.574 )
scale = Vector2( 0.7, 0.7 )
